# post-comment-system

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/apps/apps/: settings.py  urls.py  yasg.py
src/apps/blog/: admin.py  models.py  serializers.py  sub.py  urls.py  views.py
src/apps/blog/migrations/: 0001_initial.py  0002_alter_comment_options_remove_comment_title_article_and_more.py  0002_rename_artilce_comments_article.py  0003_alter_comment_time_create.py  0003_alter_comments_article.py  0004_alter_comments_article.py  0004_comment_referent.py  0005_alter_comment_referent.py  0006_alter_comment_referent.py  0007_alter_comment_referent.py  0008_alter_comment_referent.py  0009_alter_comment_referent.py  0010_comment_id_kor_alter_comment_referent.py  0011_alter_comment_author_alter_comment_post.py  0012_alter_comment_id_kor.py  0013_remove_comment_referent_comment_level_and_more.py  0014_alter_comment_level.py  0015_alter_comment_level.py  0016_alter_comment_post.py
